<resources>
    <string name="app_name">HiLTi Admin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>

    <string name="devices_screen">Device Protector</string>
    <string name="mobile_skin">Mobile Skins</string>
    <string name="mobile_screens">Mobile Screen Protector</string>
    <string name="wood_designs">Wood Designs</string>
    <string name="login_admin_name">Admin name</string>
    <string name="login_password">Password</string>
    <string name="login_remember_me">remember me</string>
    <string name="login_btn">Log in</string>
    <string name="brand_name">Brand Name</string>
    <string name="save_btn">Save</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="alert_delete_title">Sure you want to delete?</string>
    <string name="toast_delete">deleted successfully!</string>
    <string name="toast_brand_logo">Select Brand Logo!</string>
    <string name="toast_brand_name">Enter Brand name!</string>
    <string name="loading_add_brand">Add New Brand</string>
    <string name="loading_add_brand_message">Dear Admin, please wait while we are adding the new brand</string>
    <string name="toast_brand_added">Brand is added successfully!</string>
    <string name="toast_login_add_name">Enter Admin name!</string>
    <string name="toast_login_add_password">Enter password!</string>
    <string name="loading_login">Login</string>
    <string name="loading_login_message">Please wait , we are validating your data </string>
    <string name="toast_login_wrong_password">Wrong password!</string>
    <string name="toast_login_not_found">This account not found!</string>
    <string name="toast_login_success">Welcome, Login successfully!</string>
    <string name="model_name">Model name</string>
    <string name="loading_add_model">Add New Model</string>
    <string name="add_product_name">Product Name</string>
    <string name="add_product_description">Product Description</string>
    <string name="add_product_price">Product Price</string>
    <string name="add_product_code">Product Code</string>
    <string name="add_product">Add Product</string>
    <string name="add_product_title">Add new product</string>
    <string name="toast_add_product_image">Please add product image</string>
    <string name="toast_add_product_name">Please add product name!</string>
    <string name="toast_add_product_code">Please add product code!</string>
    <string name="toast_add_product_description">Please add product description!</string>
    <string name="toast_add_product_price">Please add product price!</string>
    <string name="toast_add_product_extra_price">Please add extra price!</string>
    <string name="loading_add_product_title">Add New Item</string>
    <string name="loading_add_model_message">Please wait while adding the new item</string>

    <string name="loading_add_product_message">Please wait while adding the new item...</string>
    <string name="loading_update_product_title">Update Product</string>
    <string name="loading_update_product_message">Please wait while saving changes...</string>
    <string name="toast_add_product_successfully">The product added successfully!</string>
    <string name="toast_update_product_successfully">The product updated successfully!</string>
    <string name="toast_add_product_fail">Sorry, try again!</string>
    <string name="brands_btn">Brands</string>
    <string name="add_screen_btn">Add new screen</string>
    <string name="add_screen_title">Add new screen</string>
    <string name="add_category_btn">Add new category</string>
    <string name="add_new_category_title">Add new category</string>
    <string name="add_category_title">Category title</string>
    <string name="add_category">Add category</string>
    <string name="add_wood_product_btn">Add new product</string>
    <string name="add_wood_product_title">Add new product</string>
    <string name="add_product_extra_price">Extra Price</string>
    <string name="update_product">Update Product</string>
    <string name="add_product_bulk_price">Bulk Price</string>
    <string name="toast_add_product_bulk_price">Please add bulk price!</string>
    <string name="title_bulk_orders">Bulk Orders</string>
    <string name="title_orders">Orders</string>
    <string name="toast_add_image">Please add image</string>
    <string name="toast_add_image_successfully">Image added successfully!</string>
    <string name="product_details_quantity">Quantity  :     </string>
     <string name="confirm">Confirm</string>
    <string name="alert_remove_order">Have you shipped this order ?</string>
    <string name="toast_remove_order">Order remove successfully!</string>
    <string name="order_name">Name : </string>
    <string name="order_phone">Phone : </string>
    <string name="order_at">Order at : </string>
    <string name="order_address">Shipping address : </string>
    <string name="add_image">Add new image</string>
    <string name="cart_shopping">Shopping Cart</string>
    <string name="brands">Brands</string>
    <string name="wood_designs_title">Wood Designs</string>
    <string name="show_orders">Show the ordered products</string>
    <string name="product_details_code">code : </string>
    <string name="devices_title">Devices</string>
     <string name="activate_buyer">Activate account</string>
    <string name="title_users">Bulk Buyers</string>
    <string name="toast_activate_account">Account Activated!</string>
    <string name="logout_alert">Logout from this account?</string>
    <string name="toast_logout">logout successfully</string>
    <string name="language_english">English</string>
    <string name="language_arabic">Arabic</string>
    <string name="le">LE</string>
    <string name="logout">Logout</string>
    <string name="order_location">Governorate :</string>
    <string name="delete_buyer">Delete account</string>
</resources>