<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="withText"
        />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/orders"
        android:title="@string/title_orders"

        />

    <item
        android:id="@+id/navigation_bulk_orders"
        android:icon="@drawable/bulk_orders"
        android:title="@string/title_bulk_orders"

        />
    <item
        android:id="@+id/navigation_users"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_users"
   />
</menu>