<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Skins.AddNewSkinActivity"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/save_new_screen_btn"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <TextView
        android:id="@+id/add_screen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:text="@string/add_screen_title"
        />
    <ImageView
        android:id="@+id/add_new_screen_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/button_background"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_below="@+id/add_screen_title"
        android:src="@drawable/ic_baseline_insert_photo_24"/>
    <EditText
        android:id="@+id/add_new_screen_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="12dp"
        android:layout_below="@+id/add_new_screen_image"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/add_product_name"/>
    <EditText
        android:id="@+id/add_new_screen_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="12dp"
        android:layout_below="@+id/add_new_screen_name"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/add_product_code"/>
    <EditText
        android:id="@+id/add_new_screen_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="12dp"
        android:layout_below="@+id/add_new_screen_code"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/add_product_description"/>

    <EditText
        android:id="@+id/add_new_screen_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="12dp"
        android:layout_below="@+id/add_new_screen_description"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/add_product_price"/>

    <EditText
        android:id="@+id/add_new_screen_extra_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="12dp"
        android:layout_below="@+id/add_new_screen_price"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/add_product_extra_price"/>

    <EditText
        android:id="@+id/add_new_screen_bulk_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="12dp"
        android:layout_below="@+id/add_new_screen_extra_price"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/add_product_bulk_price"/>

        </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/save_new_screen_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="12dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/black"
        android:text="@string/add_product"
        android:textAllCaps="false"
        android:textSize="16sp" />

</RelativeLayout>