<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <TextView
        android:id="@+id/products_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:text="@string/mobile_screens"
        android:textColor="@android:color/black"
        />

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/products_title"
        android:weightSum="2">

        <Button
            android:id="@+id/add_screen_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/black"
            android:text="@string/add_screen_btn"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/add_brand_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/black"
            android:text="@string/brands_btn"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/products_list"
        android:layout_below="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp" />



</RelativeLayout>